# libp2p-decentralized-file-sharing-application

./: Cargo.toml  build.rs  keys.keypair
proto/: dfs.proto  publish.proto
src/: cli.rs  main.rs
src/app/: file_download_service.rs  mod.rs  p2p.rs  server.rs
src/app/grpc/: mod.rs  server.rs
src/app/p2p/: config.rs  mod.rs  models.rs  service.rs
src/file_processor/: mod.rs  processor.rs
src/file_store/: mod.rs  rocksdb.rs
src/file_store/records/: mod.rs  pending_download.rs  published_file.rs
