[package]
name = "dfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-channel = "2.3.1"
async-trait = "0.1.86"
clap = {version = "4.5.32", features=["derive", "string", "env"] }
clap_derive = { version = "4.0.0-rc.1" }
ctrlc = { version = "3.4.5", features=["termination"] }
env_logger = "0.11.6"
homedir = "0.3.4"
libp2p = { version = "0.54.1", features = ["full"] }
log = "0.4.25"
prost = "0.13.5"
rocksdb = "0.23.0"
rs_merkle = "1.5.0"
rs_sha256 = "0.1.3"
serde = { version = "1.0.217", features = ["default", "serde_derive"] }
serde_cbor = "0.11.2"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
tonic = "0.12.3"

[build-dependencies]
tonic-build = "*"
